# myVO

./: .gitignore  CMakeLists.txt  README.md
Evalutation/: CMakeLists.txt  associate_with_groundtruth.txt  estimated.txt  groundtruth.txt  processGroundTruth.cpp  trajectoryError.cpp
config/: default.yaml
include/myslam/: camera.h  common_include.h  config.h  frame.h  g2o_types.h  map.h  mappoint.h  visual_odometry.h
src/: CMakeLists.txt  camera.cpp  config.cpp  frame.cpp  g2o_types.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
test/: CMakeLists.txt  run_vo.cpp
